--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <!-- <app-swagger></app-swagger> -->
-<button [routerLink]="'validator'">validatore</button>
-<button [routerLink]="'service-provider'">service provider</button>
-<button>conversioni</button>
+<div style="margin: 10px;">
+    <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'validator'">validatore</button>
+    <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'service-provider'">service provider</button>
+    <button style="margin: 10px;" mat-raised-button color="primary">conversioni</button>
+</div>
 <router-outlet></router-outlet>
