--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,5 @@ body {
 .Pane2 {
     overflow: auto;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
