--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 <div style="margin: 10px;">
     <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'validator'">validatore</button>
     <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'service-provider'">service provider</button>
-    <button style="margin: 10px;" mat-raised-button color="primary">conversioni</button>
+    <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'utilities'">conversioni</button>
 </div>
 <router-outlet></router-outlet>
