--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,8 +1,6 @@
-
-<!-- <app-swagger></app-swagger> -->
-<!-- <div style="margin: 10px;">
+<div style="margin: 10px;">
     <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'validator'">validatore</button>
     <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'service-provider'">service provider</button>
-    <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'utilities'">conversioni</button>
-</div> -->
-<router-outlet></router-outlet>
+    <!-- <button style="margin: 10px;" mat-raised-button color="primary" [routerLink]="'utilities'">conversioni</button> -->
+</div>
+<img class="img-responsive" src="assets/images/swagger.png" alt="swagger">
