--- a/src/app/components/dashboard/utilities/utilities.component.html
+++ b/src/app/components/dashboard/utilities/utilities.component.html
@@ -18,6 +18,12 @@
                         <ngx-mat-datetime-picker #picker></ngx-mat-datetime-picker>
                     </mat-form-field>
                 </mat-card-content>
+                <p>
+                    {{dateTransform}}
+                    <button mat-icon-button [cdkCopyToClipboard]="dateTransform" *ngIf="dateTransform">
+                        <mat-icon matTooltip="copia data">content_copy</mat-icon>
+                    </button>
+                </p>
             </mat-card>
             <mat-card fxFlex="50">
                 <mat-card-title> Decodifica targhe</mat-card-title>
