--- a/src/app/components/dashboard/utilities/utilities.component.html
+++ b/src/app/components/dashboard/utilities/utilities.component.html
@@ -70,6 +70,15 @@
                             </td>
                         </ng-container>
 
+                        <ng-container matColumnDef="operation">
+                            <th mat-header-cell *matHeaderCellDef>Operazione</th>
+                            <td mat-cell *matCellDef="let element">
+                                <mat-slide-toggle color="primary" [(ngModel)]="element.selectAdd">
+                                    {{element.selectAdd ? 'Aggiunta' : 'Rimozione'}}
+                                </mat-slide-toggle>
+                            </td>
+                        </ng-container>
+
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                     </table>
