--- a/src/app/components/dashboard/utilities/utilities.component.html
+++ b/src/app/components/dashboard/utilities/utilities.component.html
@@ -49,7 +49,8 @@
                             <mat-label>Numero di righe</mat-label>
                             <input type="number" matInput autocomplete="off" [(ngModel)]="numRows" min="0" required>
                         </mat-form-field>
-                        <span><button mat-raised-button color="primary" [disabled]="numRows <= 0" (click)="addRow(numRows)">
+                        <span><button mat-raised-button color="primary" [disabled]="numRows <= 0"
+                                (click)="addRow(numRows)">
                                 Genera righe random
                             </button></span>
                     </div>
@@ -69,7 +70,7 @@
                                     <mat-label>Inserisci una nazione</mat-label>
                                     <input matInput autocomplete="off" [value]="element.nation"
                                         [(ngModel)]="element.nation" oninput="this.value = this.value.toUpperCase()"
-                                        required>
+                                        minlength="2" maxlength="2" required>
                                     <mat-error>Inserisci una nazione corretta</mat-error>
                                 </mat-form-field>
                             </td>
