--- a/src/app/components/dashboard/utilities/utilities.component.html
+++ b/src/app/components/dashboard/utilities/utilities.component.html
@@ -42,17 +42,18 @@
                         </mat-form-field>
                     </form>
                     <div fxLayout="row" fxLayoutGap="20px">
-                        <span><button mat-raised-button color="primary" (click)="addRow()">
-                                Aggiungi riga
-                            </button></span>
                         <mat-form-field appearance="fill">
                             <mat-label>Numero di righe</mat-label>
-                            <input type="number" matInput autocomplete="off" [(ngModel)]="numRows" min="0" max="100000" required>
+                            <input type="number" matInput autocomplete="off" [(ngModel)]="numRows" min="0" max="100000"
+                                required>
                             <mat-error>Inserisci un numero tra 0 e 100000</mat-error>
                         </mat-form-field>
-                        <span><button mat-raised-button color="primary" [disabled]="numRows <= 0"
-                                (click)="addRow(numRows);" [disabled]="numRows > 100000">
+                        <span><button mat-raised-button color="primary" [disabled]="numRows <= 0 || numRows > 100000"
+                                (click)="addRow(numRows);">
                                 Genera righe random
+                            </button></span>
+                        <span><button mat-raised-button color="primary" (click)="addRow()">
+                                Aggiungi riga
                             </button></span>
                     </div>
                     <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
